[package]
name = "nal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
#env_logger = "0.11.3"
#fern = "0.6"
#log4rs = "1.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-core = "0.1.32"
tracing-appender = "0.2"

clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"
time = { version = "0.3.36", features = ["parsing", "macros"] }
#rc4 = "0.1.0"

service-manager = "0.6.1"

reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"

anyhow = "1.0.86"
thiserror = "1.0.62"
