[package]
name = "nal"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
#env_logger = "0.11.3"
#fern = "0.6"
#log4rs = "1.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-core = "0.1.32"
tracing-appender = "0.2"

clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"

#tokio = { version = "1", features = ["full"] }
#async-trait = "0.1.77"
time = { version = "0.3.36", features = ["parsing", "macros"] }
#rc4 = "0.1.0"

service-manager = "0.7"

reqwest = { version = "0.11", features = ["json", "blocking"] }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"

anyhow = "1.0.86"
thiserror = "1.0.62"

# 编译到linux-musl所需，并且安装交叉便于到musl所需工具：sudo apt install musl-tools
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.build-dependencies]
cargo-patch = "0.3"

[package.metadata.'cfg(windows)'.patch.service-manager]
version = "0.7"
patches = [
    "patches/sc.patch",
    "patches/service-manager-cargo.patch"
]

['cfg(windows)'.patch.crates-io]
service-manager = { path = './target/patch/service-manager-0.7.1' }
